# dev-tools-demo

./: .editorconfig  .gitignore  Dockerfile  Makefile  docker-compose.yaml  example.env  fixtures.json  pre-commit  pyproject.toml  requirements.txt
devtoolsdemo/: manage.py
devtoolsdemo/devtoolsdemo/: asgi.py  settings.py  urls.py  wsgi.py
devtoolsdemo/todo/: models.py  views.py
devtoolsdemo/todo/migrations/: 0001_initial.py
